Gap height fixed to match across site on mobile devices

--- a/app/styles/components/layout/gap.scss
+++ b/app/styles/components/layout/gap.scss
@@ -4,7 +4,7 @@ gap {
 	height:100px;
 	display:block;
 
-	@include media(max-width-768) {
+	@include media(max-width-750) {
 		height:50px;
 	}
 
@@ -20,7 +20,7 @@ gap {
 		height:100px;
 		display:block;
 
-		@include media(max-width-768) {
+		@include media(max-width-750) {
 			height:50px;
 		}
 
@@ -32,7 +32,7 @@ gap {
 		height:150px;
 		display:block;
 
-		@include media(max-width-768) {
+		@include media(max-width-750) {
 			height:50px;
 		}
 
